--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,10 @@
         <servlet-name>BaseServlet</servlet-name>
         <servlet-class>de.kurashigegollub.dev.gcatest.BaseServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ErrorServlet</servlet-name>
+        <servlet-class>de.kurashigegollub.dev.gcatest.ErrorServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>CallbackServlet</servlet-name>
         <url-pattern>/Callback</url-pattern>
@@ -29,6 +33,10 @@
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/Login</url-pattern>
         <url-pattern>/</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ErrorServlet</servlet-name>
+        <url-pattern>/Error</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
